[package]
name = "x-wing"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["hackerbirds"]
description = "An implementation of X-Wing written for fun purposes. Do not use for serious purposes."
repository = "https://github.com/hackerbirds/x-wing-rust"

[dependencies]
thiserror = "1.0"
ml-kem = { version = "0.1.0", features = ["deterministic"] }
rand = "0.8.5"
sha3 = "0.10.8"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
serde = { version = "1", optional = true }
serde_arrays = { version = "0.1.0", optional = true }
subtle = { version = "2.5", features = ["core_hint_black_box"] }
zeroize = { version = "1.7", features = ["alloc"] }

[features]
default = ["serde"]
# Serialise public keys and ciphertexts.
serde = ["dep:serde", "dep:serde_arrays", "x25519-dalek/serde"]
serialize_secret_key = []
serialize_shared_key = []

[dev-dependencies]
hex-literal = "0.4.1"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
