[package]
name = "x-wing"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["hackerbirds"]
description = "An implementation of X-Wing written for fun purposes. Do not use for serious purposes."
repository = "https://github.com/hackerbirds/x-wing-rust"

[dependencies]
thiserror = "1.0"
ml-kem = { version = "0.1.0", features = ["deterministic"] }
sha3 = "0.10.8"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
serde = { version = "1", optional = true }
serde_arrays = { version = "0.1.0", optional = true }
zeroize = { version = "1.7", features = ["alloc"], optional = true }
rand_core = "0.6.4"

[features]
default = ["serde", "zeroize"]
# Serialise public keys and ciphertexts.
serde = ["dep:serde", "dep:serde_arrays", "x25519-dalek/serde"]
# Zeroize public keys and secrets from memory after using them
zeroize = ["dep:zeroize"]

serialize_secret_key = []
serialize_shared_key = []

[dev-dependencies]
hex-literal = "0.4.1"
criterion = "0.5"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false
