[package]
name = "x-wing"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["hackerbirds"]
description = "An implementation of X-Wing written for fun purposes. Do not use for serious purposes."
repository = "https://github.com/hackerbirds/x-wing-rust"

[dependencies]
ml-kem = { version = "0.2.1", features = ["deterministic"] }
kem = "0.3.0-pre.0"
sha3 = "0.10.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1.8", optional = true }
rand_core = "0.6.4"

[features]
default = ["zeroize"]
# Zeroize public keys and secrets from memory after using them
zeroize = ["dep:zeroize", "ml-kem/zeroize", "x25519-dalek/zeroize"]

risky_api = []
serialize_secret_key = []

[dev-dependencies]
hex-literal = "0.4.1"
criterion = "0.5"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false
